--- a/src/pages/productDetail/productDetail.html
+++ b/src/pages/productDetail/productDetail.html
@@ -37,6 +37,7 @@
     />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <script type="module" src="./productDetail.js"></script>
+    <script type="module" src="../../js/include.js"></script>
   </head>
   <body>
     <header id="header"></header>
@@ -227,10 +228,12 @@
       <div
         class="tabs flex justify-between w-[1050px] mx-auto mb-10 mt-0 sticky top-0"
       >
-        <a class="tab is_active_tab" href="#section_description">상품설명</a>
-        <a class="tab" href="#section_details">상세정보</a>
-        <a class="tab" href="#section_reviews">후기 ( 0 )</a>
-        <a class="tab" href="#section_inquiry">문의</a>
+        <button class="tab is_active_tab" aria-controls="section_description">
+          상품설명
+        </button>
+        <button class="tab" aria-controls="section_details">상세정보</button>
+        <button class="tab" aria-controls="section_reviews">후기 ( 0 )</button>
+        <button class="tab" aria-controls="section_inquiry">문의</button>
       </div>
 
       <section
@@ -417,32 +420,139 @@
             </div>
           </div>
 
+          <!-- 게시글 -->
           <div class="border-t border-t-black">
-            <div class="border-b border-b-gray-100 px-1 py-5">
+            <!-- 공지 -->
+            <div>
+              <h2 class="review_title py-17pxr px-5 border-b border-b-gray-100">
+                <button
+                  class="review_toggle flex gap-2 text-label-medium font-semibold items-center cursor-pointer"
+                >
+                  <span
+                    class="px-2 bg-gray-100 rounded-[1px] text-label-small font-semibold text-content"
+                    >공지</span
+                  >금주의 베스트 후기 안내
+                </button>
+              </h2>
               <div
-                class="flex gap-2 text-label-medium font-semibold items-center cursor-pointer"
+                hidden
+                class="bg-gray-50 review_content p-5 border-b border-b-gray-100"
               >
-                <span
-                  class="px-2 bg-gray-100 rounded-[1px] text-label-small font-semibold text-content"
-                  >공지</span
-                >금주의 베스트 후기 안내
+                [ 금주의 Best 후기 및 상품 후기 적립금 정책 변경 안내 ] <br />
+                고객님 안녕하세요. 컬리 입니다. 적립금 지급 정책을 안내드리니
+                컬리 이용에 참고 부탁드립니다. <br />
+                ■ 적립금 지급 정책 ■<br />
+                1. 일반 후기 -글 후기 50원/건 <br />
+                -사진 후기 100원/건 <br />
+                *퍼플/더퍼플 러버스 고객님께는 더블 후기 적립금이 지급됩니다.
+                <br />
+                *지급에 영업일 기준 1~2일 소요됩니다. <br />
+                → 금~일 작성 시, 월요일 지급 <br />
+                2. 베스트 후기 <br />
+                1) 선정 건 수 : 일주일 최대 100건 <br />
+                2) 혜택 : 선정 시 적립금 5,000원 <br />
+                3) 지급 일시 : 매주 수요일 (지급일이 공휴일의 경우 전 영업일)
+                <br />
+                *당첨 ID 및 그 주의 Best 후기는 후기 게시판에서 확인하실 수
+                있습니다. <br />
+                3. 상품 후기 게시판(Product review) 적립금 지급 유의 사항 <br />
+                컬리는 믿을 수 있는 후기문화를 함께 만들어가고자 합니다. 따라서
+                후기 내용이 아래에 해당하는 경우에는 검토 후 삭제 및 적립금 회수
+                조치될 수 있습니다. <br />
+                1. 욕설, 폭력성, 음란성, 상업성 등 업체나 타인에게 불쾌한 내용을
+                작성한 경우 <br />
+                2. 구매한 상품과 무관한 내용이나 동일 문자/단순 초성의 반복 등
+                부적합한 내용을 작성한 경우 <br />
+                3. 상품의 기능이나 효과 등에 오해의 소지가 있는 내용을 작성한
+                경우 <br />
+                4. 저작권, 초상권 등 타인의 권리를 침해하는 이미지, 동영상을
+                사용한 경우 <br />
+                5. 구매한 상품이 아닌 캡쳐 사진, 포장 박스 사진 등 상품과 관련
+                없는 이미지, 동영상을 사용한 경우 <br />
+                또한, 비정상적인 방법을 통해 후기를 작성하고 적립금을 취득한
+                경우 작성자에 법적 책임의 소지가 있음을 알려드립니다.
               </div>
             </div>
-            <div class="border-b border-b-gray-100 px-1 py-5">
+
+            <div>
+              <h2 class="review_title py-17pxr px-5 border-b border-b-gray-100">
+                <button
+                  class="review_toggle flex gap-2 text-label-medium font-semibold items-center cursor-pointer"
+                >
+                  <span
+                    class="px-2 bg-gray-100 rounded-[1px] text-label-small font-semibold text-content"
+                    >공지</span
+                  >상품 후기 적립금 정책 안내
+                </button>
+              </h2>
               <div
-                class="flex gap-2 text-label-medium font-semibold items-center cursor-pointer"
+                hidden
+                class="bg-gray-50 review_content p-5 border-b border-b-gray-100"
               >
-                <span
-                  class="px-2 bg-gray-100 rounded-[1px] text-label-small font-semibold text-content"
-                  >공지</span
-                >상품 후기 적립금 정책 안내
+                [ 금주의 Best 후기 및 상품 후기 적립금 정책 변경 안내 ] <br />
+                고객님 안녕하세요. 컬리 입니다. 적립금 지급 정책을 안내드리니
+                컬리 이용에 참고 부탁드립니다. <br />
+                ■ 적립금 지급 정책 ■<br />
+                1. 일반 후기 -글 후기 50원/건 <br />
+                -사진 후기 100원/건 <br />
+                *퍼플/더퍼플 러버스 고객님께는 더블 후기 적립금이 지급됩니다.
+                <br />
+                *지급에 영업일 기준 1~2일 소요됩니다. <br />
+                → 금~일 작성 시, 월요일 지급 <br />
+                2. 베스트 후기 <br />
+                1) 선정 건 수 : 일주일 최대 100건 <br />
+                2) 혜택 : 선정 시 적립금 5,000원 <br />
+                3) 지급 일시 : 매주 수요일 (지급일이 공휴일의 경우 전 영업일)
+                <br />
+                *당첨 ID 및 그 주의 Best 후기는 후기 게시판에서 확인하실 수
+                있습니다. <br />
+                3. 상품 후기 게시판(Product review) 적립금 지급 유의 사항 <br />
+                컬리는 믿을 수 있는 후기문화를 함께 만들어가고자 합니다. 따라서
+                후기 내용이 아래에 해당하는 경우에는 검토 후 삭제 및 적립금 회수
+                조치될 수 있습니다. <br />
+                1. 욕설, 폭력성, 음란성, 상업성 등 업체나 타인에게 불쾌한 내용을
+                작성한 경우 <br />
+                2. 구매한 상품과 무관한 내용이나 동일 문자/단순 초성의 반복 등
+                부적합한 내용을 작성한 경우 <br />
+                3. 상품의 기능이나 효과 등에 오해의 소지가 있는 내용을 작성한
+                경우 <br />
+                4. 저작권, 초상권 등 타인의 권리를 침해하는 이미지, 동영상을
+                사용한 경우 <br />
+                5. 구매한 상품이 아닌 캡쳐 사진, 포장 박스 사진 등 상품과 관련
+                없는 이미지, 동영상을 사용한 경우 <br />
+                또한, 비정상적인 방법을 통해 후기를 작성하고 적립금을 취득한
+                경우 작성자에 법적 책임의 소지가 있음을 알려드립니다.
               </div>
             </div>
-            <div class="border-b border-b-gray-100 flex gap-82pxr p-5">
-              <div
-                class="py-17pxr text-left text-gray-400 font-semibold text-label-small align-top"
+
+            <!-- 글없을때 -->
+            <!-- <div
+              class="border-b border-b-gray-100 flex flex-col p-5 gap-5 items-center"
+            >
+              <svg
+                class="text-gray-100"
+                width="48"
+                height="48"
+                aria-hidden="true"
               >
-                김*진
+                <use href="/public/icon/_sprite.svg#Notice"></use>
+              </svg>
+              <p>따뜻한 첫 후기를 기다리고 있어요.</p>
+            </div> -->
+            <!-- 후기글 -->
+            <!-- <div class="border-b border-b-gray-100 flex gap-82pxr p-5">
+              <div
+                class="py-17pxr text-left text-gray-400 font-semibold text-label-small flex items-top gap-2"
+              >
+                <span
+                  class="bg-secondary rounded-[1px] px-2 text-white border border-secondary self-start"
+                  >베스트</span
+                >
+                <span
+                  class="text-primary rounded-[1px] px-2 border border-primary self-start"
+                  >퍼플</span
+                >
+                <span class="self-start">김*진</span>
               </div>
               <div
                 class="py-17pxr text-left text-paragraph-small flex flex-col gap-5"
@@ -456,27 +566,9 @@
                 </p>
                 <p class="text-gray-400 font-semibold">2022.11.10</p>
               </div>
-            </div>
-            <div class="border-b border-b-gray-100 flex gap-82pxr p-5">
-              <div
-                class="py-17pxr text-left text-gray-400 font-semibold text-label-small align-top"
-              >
-                김*진
-              </div>
-              <div
-                class="py-17pxr text-left text-paragraph-small flex flex-col gap-5"
-              >
-                <h4 class="text-gray-400 font-semibold">
-                  [풀무원] 탱탱쫄면(4개입)
-                </h4>
-                <p class="leading-[160%]">
-                  너무 맛있어여~<br />
-                  면이 쫄깃하고 양념도 짱맛나요!!
-                </p>
-                <p class="text-gray-400 font-semibold">2022.11.10</p>
-              </div>
-            </div>
+            </div> -->
           </div>
+          <!-- /게시글 -->
 
           <div class="flex items-start gap-4 mx-auto">
             <button
