--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <script src="./main.js" type="module"></script>
     <script type="module" src="./src/js/include.js"></script>
+    <script type="module" src="./src/components/header/header.js"></script>
   </head>
   <body>
-    <header id="header"><header>
+    <header id="header"></header>
     <main class="flex flex-col items-center justify-center size-full">
       <!-- Slider main container -->
       <div class="swiper-container swiper w-[1920px] h-370pxr">
