[🎨Modify]: register 마크업 시작

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <script type="module" src="./src/js/include.js"></script>
   </head>
   <body>
-    <header id="header"><header>
+    <header id="header"></header>
     <main class="flex flex-col items-center justify-center size-full">
       <!-- Slider main container -->
       <div class="swiper-container swiper w-[1920px] h-370pxr">
