[🎨Modify]: cart.html 상품 수량 버튼의 .sr-only 변경
cart.html
- 상품 수량 버튼의 .sr-only 수량 감소, 수량 증가로 변경

--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -94,11 +94,11 @@
                       </a>
                       <div class="option_count">
                         <button type="button" class="minus w-30pxr h-30pxr" style="background-image: url(/input/minus-disabled.svg);">
-                          <span class="sr-only">감소</span>
+                          <span class="sr-only">수량 감소</span>
                         </button>
                         <span class="item_count">1</span>
                         <button type="button"  class="plus w-30pxr h-30pxr" style="background-image: url(/input/plus.svg);">
-                          <span class="sr-only">증가</span>
+                          <span class="sr-only">수량 증가</span>
                         </button>
                       </div>
                       <div class="flex flex-col items-end font-bold product_price w-130pxr ">
@@ -127,11 +127,11 @@
                       </a>
                       <div class="option_count">
                         <button type="button" class="minus w-30pxr h-30pxr" style="background-image: url(/input/minus-disabled.svg);">
-                          <span class="sr-only">감소</span>
+                          <span class="sr-only">수량 감소</span>
                         </button>
                         <span class="item_count">1</span>
                         <button type="button"  class="plus w-30pxr h-30pxr" style="background-image: url(/input/plus.svg);">
-                          <span class="sr-only">증가</span>
+                          <span class="sr-only">수량 증가</span>
                         </button>
                       </div>
                       <div class="flex flex-col items-end font-bold product_price w-130pxr ">
@@ -178,11 +178,11 @@
                       </a>
                       <div class="option_count">
                         <button type="button" class="minus w-30pxr h-30pxr" style="background-image: url(/input/minus-disabled.svg);">
-                          <span class="sr-only">감소</span>
+                          <span class="sr-only">수량 감소</span>
                         </button>
                         <span class="item_count">1</span>
                         <button type="button"  class="plus w-30pxr h-30pxr" style="background-image: url(/input/plus.svg);">
-                          <span class="sr-only">증가</span>
+                          <span class="sr-only">수량 증가</span>
                         </button>
                       </div>
                       <div class="flex flex-col items-end font-bold product_price w-130pxr ">
@@ -229,11 +229,11 @@
                       </a>
                       <div class="option_count">
                         <button type="button" class="minus w-30pxr h-30pxr" style="background-image: url(/input/minus-disabled.svg);">
-                          <span class="sr-only">감소</span>
+                          <span class="sr-only">수량 감소</span>
                         </button>
                         <span class="item_count">1</span>
                         <button type="button"  class="plus w-30pxr h-30pxr" style="background-image: url(/input/plus.svg);">
-                          <span class="sr-only">증가</span>
+                          <span class="sr-only">수량 증가</span>
                         </button>
                       </div>
                       <div class="flex flex-col items-end font-bold product_price w-130pxr ">
