[🎨Modify]: cart.html cart list가 없는 상태 UI 구현
cart.html
- cart list가 없는 상태 UI 구현

--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -60,7 +60,14 @@
               <span class="w-[1px] h-[13px] block bg-gray-200 mx-2"></span>
               <button class="item_select_delete">선택삭제</button>
             </div>
+            
             <!-- cart list -->
+            <!-- cart list가 없을 떄  -->
+            <!-- <section>
+              <p class="text-center border-solid py-115pxr text-gray-200 font-label-large text-label-medium border-t-[1px] border-t-content border-b-[1px] border-b-gray-50 ">장바구니에 담긴 상품이 없습니다.</p>
+            </section> -->
+            
+            <!-- cart list가 있을 떄 -->
             <div class="border-b border-solid cart_list border-gray-50">
               <ul>
                 <li class="group_category">
@@ -114,8 +121,8 @@
                     </li>
                     <li class="flex items-center py-5">
                       <fieldset class="item_select">
-                        <input type="checkbox" id="itemSelect" class="input_checkbox_nonlabel peer top-[-17px]"/>
-                        <label for="itemSelect" class="checkbox_before_nonlabel peer-checked:before:bg-[url(/input/checkBox-isChecked.svg)]">
+                        <input type="checkbox" id="itemSelect2" class="input_checkbox_nonlabel peer top-[-17px]"/>
+                        <label for="itemSelect2" class="checkbox_before_nonlabel peer-checked:before:bg-[url(/input/checkBox-isChecked.svg)]">
                           <span class="sr-only">목록 선택</span>
                         </label>
                       </fieldset>
@@ -165,8 +172,8 @@
                   <ul class="product_refrigerated">
                     <li class="flex items-center py-5">
                       <fieldset class="item_select">
-                        <input type="checkbox" id="itemSelect" class="input_checkbox_nonlabel peer top-[-17px]"/>
-                        <label for="itemSelect" class="checkbox_before_nonlabel peer-checked:before:bg-[url(/input/checkBox-isChecked.svg)]">
+                        <input type="checkbox" id="itemSelect3" class="input_checkbox_nonlabel peer top-[-17px]"/>
+                        <label for="itemSelect3" class="checkbox_before_nonlabel peer-checked:before:bg-[url(/input/checkBox-isChecked.svg)]">
                           <span class="sr-only">목록 선택</span>
                         </label>
                       </fieldset>
@@ -216,8 +223,8 @@
                   <ul class="product_frozen">
                     <li class="flex items-center py-5">
                       <fieldset class="item_select">
-                        <input type="checkbox" id="itemSelect" class="input_checkbox_nonlabel peer top-[-17px]"/>
-                        <label for="itemSelect" class="checkbox_before_nonlabel peer-checked:before:bg-[url(/input/checkBox-isChecked.svg)]">
+                        <input type="checkbox" id="itemSelect4" class="input_checkbox_nonlabel peer top-[-17px]"/>
+                        <label for="itemSelect4" class="checkbox_before_nonlabel peer-checked:before:bg-[url(/input/checkBox-isChecked.svg)]">
                           <span class="sr-only">목록 선택</span>
                         </label>
                       </fieldset>
