[🎨Modify] : 2번째 상품 swiper 80%완성(화살표 구현 필요)

--- a/index.html
+++ b/index.html
@@ -40,35 +40,43 @@
     <script type="module" src="./src/js/include.js"></script>
   </head>
   <body>
-    <header id="header"><header>
+    <header id="header"></header>
     <main class="flex flex-col items-center justify-center size-full">
       <!-- Slider main container -->
-      <div class="swiper-container swiper w-[1920px] h-370pxr">
+      <div class="swiper w-[1920px] h-370pxr">
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
           <!-- Slides -->
-          <div class="flex items-center justify-center swiper-slide size-full">
+          <div
+            class="flex items-center justify-center w-full overflow-hidden swiper-slide"
+          >
             <img
               class="object-cover w-full"
               src="./public/banner/banner05.png"
               alt=""
             />
           </div>
-          <div class="flex items-center justify-center swiper-slide size-full">
+          <div
+            class="flex items-center justify-center w-full overflow-hidden swiper-slide"
+          >
             <img
               class="object-cover w-full"
               src="./public/banner/banner02.png"
               alt=""
             />
           </div>
-          <div class="flex items-center justify-center swiper-slide size-full">
+          <div
+            class="flex items-center justify-center w-full overflow-hidden swiper-slide"
+          >
             <img
               class="object-cover w-full"
               src="./public/banner/banner03.png"
               alt=""
             />
           </div>
-          <div class="flex items-center justify-center swiper-slide size-full">
+          <div
+            class="flex items-center justify-center w-full overflow-hidden swiper-slide"
+          >
             <img
               class="object-cover w-full"
               src="./public/banner/banner01.png"
@@ -86,14 +94,14 @@
       </div>
 
       <section
-        class="w-[1050px] h-608pxr flex flex-col items-start py-40pxr gap-28pxr box-content"
+        class="w-[1050px] h-608pxr flex flex-col items-start py-40pxr gap-28pxr box-content overflow-hidden"
       >
         <div
           class="flex flex-col justify-center items-center w-[1042px] h-563pxr p-4pxr"
         >
           <h2 class="text-[28.43px] font-bold">이 상품 어때요?</h2>
         </div>
-        <div class="swiper-container swiper2 w-[1050px] h-516pxr">
+        <div class="swiper2 w-[1050px] h-516pxr">
           <ul
             class="flex items-start justify-between w-full list-none swiper-wrapper"
           >
@@ -132,7 +140,10 @@
               <button class="mt-6pxr" type="button">
                 <img src="./public/banner/add cart button.png" alt="" />
               </button>
-              <h3 class="font-normal text-16pxr mt-8pxr">
+              <span class="font-semibold text-gray-200 text-14pxr mt-16pxr"
+                >사장님도 포기한 맛</span
+              >
+              <h3 class="font-bold text-16pxr mt-8pxr">
                 맛없고 비싸기만한 쫄면
               </h3>
               <span class="font-normal text-gray-300 text-14pxr mt-16pxr"
@@ -155,7 +166,10 @@
               <button class="mt-6pxr" type="button">
                 <img src="./public/banner/add cart button.png" alt="" />
               </button>
-              <h3 class="font-normal text-16pxr mt-8pxr">
+              <span class="font-semibold text-gray-200 text-14pxr mt-16pxr"
+                >사장님도 포기한 맛</span
+              >
+              <h3 class="font-bold text-16pxr mt-8pxr">
                 맛없고 비싸기만한 쫄면
               </h3>
               <span class="font-normal text-gray-300 text-14pxr mt-16pxr"
@@ -178,7 +192,10 @@
               <button class="mt-6pxr" type="button">
                 <img src="./public/banner/add cart button.png" alt="" />
               </button>
-              <h3 class="font-normal text-16pxr mt-8pxr">
+              <span class="font-semibold text-gray-200 text-14pxr mt-16pxr"
+                >사장님도 포기한 맛</span
+              >
+              <h3 class="font-bold text-16pxr mt-8pxr">
                 맛없고 비싸기만한 쫄면
               </h3>
               <span class="font-normal text-gray-300 text-14pxr mt-16pxr"
@@ -201,7 +218,10 @@
               <button class="mt-6pxr" type="button">
                 <img src="./public/banner/add cart button.png" alt="" />
               </button>
-              <h3 class="font-normal text-16pxr mt-8pxr">
+              <span class="font-semibold text-gray-200 text-14pxr mt-16pxr"
+                >사장님도 포기한 맛</span
+              >
+              <h3 class="font-bold text-16pxr mt-8pxr">
                 맛없고 비싸기만한 쫄면
               </h3>
               <span class="font-normal text-gray-300 text-14pxr mt-16pxr"
@@ -224,7 +244,10 @@
               <button class="mt-6pxr" type="button">
                 <img src="./public/banner/add cart button.png" alt="" />
               </button>
-              <h3 class="font-normal text-16pxr mt-8pxr">
+              <span class="font-semibold text-gray-200 text-14pxr mt-16pxr"
+                >사장님도 포기한 맛</span
+              >
+              <h3 class="font-bold text-16pxr mt-8pxr">
                 맛없고 비싸기만한 쫄면
               </h3>
               <span class="font-normal text-gray-300 text-14pxr mt-16pxr"
@@ -247,7 +270,10 @@
               <button class="mt-6pxr" type="button">
                 <img src="./public/banner/add cart button.png" alt="" />
               </button>
-              <h3 class="font-normal text-16pxr mt-8pxr">
+              <span class="font-semibold text-gray-200 text-14pxr mt-16pxr"
+                >사장님도 포기한 맛</span
+              >
+              <h3 class="font-bold text-16pxr mt-8pxr">
                 맛없고 비싸기만한 쫄면
               </h3>
               <span class="font-normal text-gray-300 text-14pxr mt-16pxr"
@@ -270,7 +296,10 @@
               <button class="mt-6pxr" type="button">
                 <img src="./public/banner/add cart button.png" alt="" />
               </button>
-              <h3 class="font-normal text-16pxr mt-8pxr">
+              <span class="font-semibold text-gray-200 text-14pxr mt-16pxr"
+                >사장님도 포기한 맛</span
+              >
+              <h3 class="font-bold text-16pxr mt-8pxr">
                 맛없고 비싸기만한 쫄면
               </h3>
               <span class="font-normal text-gray-300 text-14pxr mt-16pxr"
@@ -288,8 +317,19 @@
           <div class="swiper2-pagination"></div>
 
           <!-- If we need navigation buttons -->
-          <div class="swiper-button-prev after:hidden bg-[/]"></div>
-          <div class="swiper-button-next after:hidden"></div>
+          <div class="relative">
+            <div
+              class="absolute z-10 top-[-370px] left-[-30px] swiper2-button-prev"
+            >
+              <svg role="button" width="60" height="60" viewBox="0 0 52 52">
+                <use href="./public/icon/_sprite.svg#Arrow_slide" />
+              </svg>
+            </div>
+
+            <div class="absolute swiper2-button-next">
+              <img src="" alt="" />
+            </div>
+          </div>
         </div>
       </section>
 
